# private-channel-bot

./: .env.example  Cargo.toml  README.md
.cargo/: config
.github/workflows/: build.yml
src/: main.rs
